# X-GIS

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  ROADMAP.md  SPEC.md  package.json  tsconfig.base.json  vitest.config.ts
.claude/: launch.json  settings.local.json
.githooks/: pre-push
.github/workflows/: deploy-pages.yml  playground-audit.yml  playground-smoke.yml  test.yml
blueprint/: package.json  tsconfig.json
blueprint/src/: blueprint.css  datapeek.ts  diagnostics.ts  editor.ts  geometry.ts  history.ts  import.ts  index.ts  minimap.ts  palette.ts  types.ts
compiler/: bench-geojson-vt-encode.ts  package.json  tsconfig.json
compiler/src/: index.ts
docs/: COORDINATES.md  ROADMAP-3D-TEXT.md  WEBGPU_ROADMAP.md  dsfun-refactor-plan.md
examples/: hello-v2.xgis  hello.xgis
playground/: compare.html  demo.html  draw-order-trace.json  gpu-features.json  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
playground/e2e/: _along-path-roads.spec.ts  _auto-labels.spec.ts  _bug-replay.spec.ts  _building-depth-diag.spec.ts  _building-depth-snapshot.spec.ts  _capture-thumbnails.spec.ts  _cold-start-perf.spec.ts  _compile-opt-bright.spec.ts  _compute-path-continent-match.spec.ts  _continuous-wheel-zoom-mobile.spec.ts  _continuous-wheel-zoom.spec.ts  _convert-bright-flat-tilecount.spec.ts  _convert-bright.spec.ts  (+147 more)
playground/e2e-fixtures/: bug-snapshot.json
runtime/: package.json
scripts/: precheck.ts
scripts/cross-validation/: generate-fixtures.py  pyproject.toml
site/: astro.config.mjs  package.json
vscode-xgis/: package.json
(+886 files in other folders)
