[project]
name = "xgis-cross-validation"
version = "0.1.0"
description = "Generates reference JSON fixtures for X-GIS cross-validation tests using independent Python GIS libraries (pyproj, mercantile, shapely)."
requires-python = ">=3.10"
dependencies = [
    "pyproj>=3.6",
    "mercantile>=1.2",
    "shapely>=2.0",
]

[tool.uv]
package = false
